--- a/client/styles/_error.sass
+++ b/client/styles/_error.sass
@@ -1,6 +1,10 @@
 .global-status
   z-index: 10
-  width: 100%
+  position: fixed
+  +desktop
+    width: calc(100% - #{$left-menu-width})
+  +mobile
+    width: 100%
   height: 48px
   color:  white
   svg.tick
